# furgbol-core

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md
ext/grSim-proto/: CMakeLists.txt
ext/ssl-proto/: CMakeLists.txt
ext/ssl-refbox-proto/: CMakeLists.txt
ext/ssl-vision-proto/: CMakeLists.txt
ext/sslproto/: CMakeLists.txt
scripts/: install-deps  install-protobuf.sh
src/arduino/radio_transmitter/: radio_transmitter.ino
src/furgbol-proto/: CMakeLists.txt  ai_variables.proto  messages_ai_2Dsimulator.proto  messages_ai_data_manager.proto  messages_control.proto  messages_data_manager.proto  messages_vision_manager.proto
src/io/: CMakeLists.txt
src/io/include/: f180_serial_message.h  f180_serial_package.h  multicast_base.h  multicast_receiver.h  multicast_sender.h  serial_message.h  serial_package.h  serial_sender.h  serial_writer.h  udp_receiver.h  udp_sender.h  vss_serial_message.h
src/io/src/: f180_serial_message.cc  f180_serial_package.cc  multicast_base.cc  multicast_receiver.cc  multicast_sender.cc  serial_message.cc  serial_sender.cc  serial_writer.cc  udp_receiver.cc  udp_sender.cc  vss_serial_message.cc
src/proto/: CMakeLists.txt  messages_ai_2Dsimulator.proto  messages_ai_data_manager.proto
src/sslproto/: CMakeLists.txt
